# aeta-earthquake-predictor

./: .gitignore  README.md  pyproject.toml
baseline_model/: ReadMe.mh  config.py  lgb.py  mergeData.py  pred.py  readData.py  toolkit.py
baseline_model/model/: 0_mag_model.txt  1_mag_model.txt  2_mag_model.txt  3_mag_model.txt  4_mag_model.txt  5_mag_model.txt  6_mag_model.txt  7_mag_model.txt
notebooks/exploratory-data-analysis/: download_data.ipynb
